WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
37825
[chromium] select popup asserts on Mac
https://bugs.webkit.org/show_bug.cgi?id=37825
Summary
[chromium] select popup asserts on Mac
Jay Civelli
Reported
2010-04-19 15:03:47 PDT
- In Chromium Mac, open a page with a select (ex:
http://www.google.com/preferences?hl=en
) - Open the select popup, select an item so the popup is closed. - Open the select popup again. Expected: The popup shows again. Actual: The tab crashes (because an ASSERT is triggered)
Attachments
Fix for an ASSERT with select popups on Mac
(1.70 KB, patch)
2010-04-19 15:22 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Fixing style
(1.72 KB, patch)
2010-04-19 15:24 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Fixing ChangeLog
(1.69 KB, patch)
2010-04-20 10:00 PDT
,
Jay Civelli
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Jay Civelli
Comment 1
2010-04-19 15:22:11 PDT
Created
attachment 53728
[details]
Fix for an ASSERT with select popups on Mac
WebKit Review Bot
Comment 2
2010-04-19 15:23:45 PDT
Attachment 53728
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKit/chromium/src/ChromeClientImpl.cpp:633: Tab found; better to use spaces [whitespace/tab] [1] WebKit/chromium/src/ChromeClientImpl.cpp:634: Tab found; better to use spaces [whitespace/tab] [1] WebKit/chromium/src/ChromeClientImpl.cpp:635: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jay Civelli
Comment 3
2010-04-19 15:24:43 PDT
Created
attachment 53729
[details]
Fixing style
Shinichiro Hamaji
Comment 4
2010-04-20 01:17:24 PDT
Comment on
attachment 53729
[details]
Fixing style
> + * WebKit.gyp:
It seems you didn't modify this file actually.
Jay Civelli
Comment 5
2010-04-20 10:00:31 PDT
Created
attachment 53832
[details]
Fixing ChangeLog
WebKit Commit Bot
Comment 6
2010-04-21 20:22:23 PDT
Comment on
attachment 53832
[details]
Fixing ChangeLog Clearing flags on attachment: 53832 Committed
r58046
: <
http://trac.webkit.org/changeset/58046
>
WebKit Commit Bot
Comment 7
2010-04-21 20:22:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug