2010-04-21  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Darin Fisher.

        [Chromium] Don't notify the WebView that a popup was
        opened when the popup is handled externally, as the popup
        is in that case transparent to the WebView.
        The notification was causing an ASSERT on Mac (where
        the popup is handled externally) as there would be no
        notification that the popup was closed.
        https://bugs.webkit.org/show_bug.cgi?id=37825

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened):

Canonical link: https://commits.webkit.org/49327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58046 268f45cc-cd09-0410-ab3c-d52691b4dbfc